# antophone

./: .gitignore  README.md  antophone.py  farm.py  foo.py  main.py  pyproject.toml  setup.py  test.mid  train.py
antophone/: __init__.py  ant.py  config.py  farm.py  game.py  instrument.py  layouts.py  mic.py  utils.py
antophone/farm/: __init__.py  ant.py  cliffs.py  snake.py  ttt.py
antophone/phone/: __init__.py  ant.py  config.py  instrument.py  layouts.py  midi.py
misc/: mic.py  midi.py
