[tool.poetry]
name = "antophone"
version = "0.1.0"
description = ""
authors = ["David Kellerman <david@silvermoon.org>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
# aubio = "^0.4.9"
# matplotlib = "^3.6.2"
# six = "^1.16.0"
pygame = "^2.1.2"
librosa = "^0.9.2"

[tool.poetry.dev-dependencies]
ipython = "^8.6.0"
pep8 = "^1.7.1"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
